--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@react-google-maps/api": "^2.20.3",
     "next": "^15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
