--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@react-google-maps/api": "^2.20.3",
+    "@supabase/supabase-js": "^2.46.1",
     "next": "^15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
