--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "prisma": "^5.22.0",
+    "tailwindcss": "^3.4.15",
     "typescript": "4.5.5"
   }
 }
